[project]
name = "cardinity-python"
version = "1.0.0-rc1"
description = "Python SDK for Cardinity Payment Gateway API"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Kyalo Kitili", email = "kyalo@trendpro.co.ke"},
]
maintainers = [
    {name = "Kyalo Kitili", email = "kyalo@trendpro.co.ke"},
]
keywords = ["cardinity", "payment", "gateway", "api", "sdk"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.25.0",
    "requests-oauthlib>=1.3.0",
    "cerberus>=1.3.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "ruff>=0.1.0",
    "mypy>=0.800",
    "sphinx>=4.0",
    "sphinx-rtd-theme>=0.5",
]

[project.urls]
Homepage = "https://github.com/trendpro/cardinity-python"
Documentation = "https://developers.cardinity.com/"
Repository = "https://github.com/trendpro/cardinity-python"
"Bug Tracker" = "https://github.com/trendpro/cardinity-python/issues"
Changelog = "https://github.com/trendpro/cardinity-python/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cardinity"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "E501",  # Line too long - handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"examples/*.py" = ["F841"]  # Allow unused variables in example files
"tests/unit/test_performance.py" = ["F841"]  # Allow unused variables in performance tests

[tool.mypy]
python_version = "3.8"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=cardinity --cov-report=term-missing"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests",
    "performance: marks tests as performance tests",
    "security: marks tests as security tests",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "psutil>=7.0.0",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.12.0",
    "sphinx>=7.1.2",
    "sphinx-rtd-theme>=3.0.2",
    "types-requests>=2.32.0.20241016",
    "types-requests-oauthlib>=2.0.0.20240417",
]
